--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "daisyui": "^4.12.23",
+    "haversine-distance": "^1.2.3",
     "lucide-react": "^0.474.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
@@ -14,8 +15,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typewriter-effect": "^2.21.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.1.4",
     "concurrently": "^9.1.2"
   }
 }
